--- a/practica2/memoria/input/gcl.tex
+++ b/practica2/memoria/input/gcl.tex
@@ -26,7 +26,7 @@ Para calcular los valores generados por estos g.c.l se han implementado los sigu
 
 \subsection{Resultados}
 
-En la siguiente tabla, podemos ver los periodos máximos obtenidos y para que semilla se ha obtenido con cada una de las implementaciones de los c.g.l:
+En la siguiente tabla, podemos ver los periodos máximos obtenidos y para que semilla se ha obtenido con cada una de las implementaciones de los g.c.l:
 \begin{table}[H]
 \centering
 \begin{tabular}{|c|l|c|c|}
@@ -46,7 +46,7 @@ En la siguiente tabla, podemos ver los periodos máximos obtenidos y para que se
 2061 & Aritmética real usando fmod & 0 & 10000 \\ \hline
 \end{tabular}
 \end{table}
-Primeramente debemos notar que el g.c.l que utiliza un modificador a = 2061 si ofrece el periodo máximo posible, es decir, tiene un periodo = m. Sin embargo el g.c.l con modificador a = 2060 no, la longitud máxima de su periodo es menor a m.
+Primeramente debemos notar que el g.c.l que utiliza un multiplicador a = 2061 si ofrece el periodo máximo posible, es decir, tiene un periodo = m. Sin embargo el g.c.l con multiplicador a = 2060 no, la longitud máxima de su periodo es menor a m.
 
 \newpage
 
@@ -56,9 +56,9 @@ Esto es debido los siguientes factores:
 	\item Para a = 2061, a - 1 es múltiplo de todos los primos que dividen a m, en este caso 1, 2 y 5. Sin embargo para a = 2060 esto no se cumple.
 	\item Para a = 2061, a - 1 es múltiplo de 4, ya que m lo es también. Para a = 2060 esto no se cumple.
 \end{itemize}
-Por tanto esta comprobado que e g.c.l con modificador 2061 debe aportar un periodo máximo = m mientra que el g.c.l con modificador 2060 no.
+Por tanto esta comprobado que el g.c.l con multiplicador 2061 debe aportar un periodo máximo = m mientras que el g.c.l con multiplicador 2060 no.
 
-También podemos no que hay inconsistencias en la tabla, es decir, hay implementaciones que no aportan los resultados que deberían. A continuación analizaremos cada implementación por separado
+También podemos notar que hay inconsistencias en la tabla, es decir, hay implementaciones que no aportan los resultados que deberían. A continuación analizaremos cada implementación por separado.
 
 
 \subsection{Aritmética entera}
@@ -74,9 +74,9 @@ También podemos no que hay inconsistencias en la tabla, es decir, hay implement
 
 En primer lugar analizaremos los resultados obtenidos para el método de aritmética entera.
 
-Para un modificador de a = 2060 vemos que el periodo máximo que ofrece el g.c.l es 5, mientras que para un modificador de a = 2061 alcanza el máximo.
+Para un multiplicador de a = 2060 vemos que el periodo máximo que ofrece el g.c.l es 5, mientras que para un multiplicador de a = 2061 alcanza el máximo.
 
-Los resultados que aporta esta implementación no son para nada sorprendentes, pues simplemente aplica la formula clásica para calcular g.c.l y además trabaja con valores de tipo entero, lo que elimina cualquier problema de redondeo.
+Los resultados que aporta esta implementación no son para nada sorprendentes, pues simplemente aplica la formula clásica para calcular g.c.l y además trabaja con valores de tipo entero, lo que elimina cualquier problema de precisión.
 
 \subsection{Aritmética real `artesanal'}
 \begin{table}[H]
@@ -97,11 +97,11 @@ Llamamos artesanal a esta implementación puesto que nosotros tratamos con los d
 
 El problema principal en esta implementación es que no se devuelve la parte entera del número, puesto que en principio no debería hacer falta, ya que las divisiones deberían ser enteras y exactas. Sin embargo, no lo son.
 
-En cada división se producen una serie de errores de precisión derivados de la aritmética en coma flotante, que alteran los números de manera que al principio el error es pequeño, pero división tras división se va agravando más y más hasta alterar por completo los números generados por el c.g.l
+En cada división se producen una serie de errores de precisión derivados de la aritmética en coma flotante, que alteran los números de manera que al principio el error es pequeño, pero división tras división se va agravando más y más hasta alterar por completo los números generados por el g.c.l
 
 Además podemos ver que según utilicemos valores de tipo float o double, los errores de precisión no son los mismos, puesto que el tipo double posee el doble de precisión que el tipo float.
 
-Finalmente este generador es capaz de producir números con decimales, cuando un g.c.l debe producir números enteros. Por esta razón parece que el c.g.l con a = 2061 y tipo double parece que genera 10000 números distintos. Lo que sucede es que se ha limitado al generador a producir solo 10000 valores, puesto que si no al generar números decimales, el generador podría haber ciclado durante una cantidad de tiempo considerable.
+Finalmente este generador es capaz de producir números con decimales, cuando un g.c.l debe producir números enteros. Por esta razón parece que el g.c.l con a = 2061 y tipo double parece que genera 10000 números distintos. Lo que sucede es que se ha limitado al generador a producir solo 10000 valores, puesto que si no al generar números decimales, el generador podría haber ciclado durante una cantidad de tiempo considerable.
 
 \subsection{Aritmética real `artesanal' corregida}
 \begin{table}[H]
@@ -133,7 +133,7 @@ Este método realiza los mismos cálculos que el anterior salvo porque al final 
 \end{tabular}
 \end{table}
 
-Esta implementación sencillamente hace uso de la función fmod, que permite realizar la operación modulo para valores de tipo real como float y double. Al utilizar una función de la biblioteca cmath, nos olvidamos de tener que prestar atención a los errores de precisión
+Esta implementación sencillamente hace uso de la función fmod, que permite realizar la operación módulo para valores de tipo real como float y double. Al utilizar una función de la biblioteca cmath, nos olvidamos de tener que prestar atención a los errores de precisión
 
 \subsection{Conclusión}
 Finalmente y como conclusión creo que la mejor forma de implementar un g.c.l es hacer una correcta gestión de los errores de precisión o trabajar con números enteros y evitar estos errores directamente.
