--- a/practica2/memoria/input/quiosco.tex
+++ b/practica2/memoria/input/quiosco.tex
@@ -19,8 +19,8 @@ El objetivo de esta simulación es encontrar el número de periódicos que se so
 
 \begin{itemize}
 	\item Distribución a: $P(D = d) = \frac{1}{100}$, $\forall 0,...,99$ \\ Esta es la distribución uniforme, es decir, todos los valores para D tiene la misma probabilidad.
-	\item Distribución b: $P(D = d) = \frac{100 - d}{5050}$, $\forall 0,...,99$ \\ Esta es la distribución proporcional, los valores mas pequeños de d tienen mayor probabilidad cuanto mas pequeños sean.
-	\item Distribución c: $P(D = d) = \frac{d}{2500}$ si $ 0 \leq d < 50$ y  $P(D = d) = \frac{100-d}{2500}$ si $ 50 \leq d \leq 99$ \\ Esta es la distribución triangular, lo que significa que los valores centrales de d tiene mayor probabilidad que los valores extremos, es decir, si $ 0 \leq d \leq 99$ entonces 0 y 99 tienen una probabilidad muy baja mientras que 50 --- que es el valor medio --- tiene la probabilidad mas alta.
+	\item Distribución b: $P(D = d) = \frac{100 - d}{5050}$, $\forall 0,...,99$ \\ Esta es la distribución proporcional, los valores más pequeños de d tienen mayor probabilidad cuanto más pequeños sean.
+	\item Distribución c: $P(D = d) = \frac{d}{2500}$ si $ 0 \leq d < 50$ y  $P(D = d) = \frac{100-d}{2500}$ si $ 50 \leq d \leq 99$ \\ Esta es la distribución triangular, lo que significa que los valores centrales de d tiene mayor probabilidad que los valores extremos, es decir, si $ 0 \leq d \leq 99$ entonces 0 y 99 tienen una probabilidad muy baja mientras que 50 --- que es el valor medio --- tiene la probabilidad más alta.
 \end{itemize}
 
 
@@ -68,12 +68,12 @@ El número de iteraciones ha sido de 100000, lo que quiere decir, que para cada 
 
 Para la distribución a:
 
-Podemos observar como, al aumentar el valor de pérdida/unidad, el valor óptimo de s disminuye, es decir, cuanto mas aumenta lo que perdemos por una unidad, menos rentable resulta pedir muchas unidades, porque al ser la demanda igualmente probable, es igualmente posible vender 0 unidades que vender 99.
+Podemos observar como, al aumentar el valor de pérdida/unidad, el valor óptimo de s disminuye, es decir, cuanto más aumenta lo que perdemos por una unidad, menos rentable resulta pedir muchas unidades, porque al ser la demanda igualmente probable, es igualmente posible vender 0 unidades que vender 99.
 
 Para la distribución b:
 
-En este caso podemos ver como, al ser mucho mas posible vender pocas unidades que vender mucho, es muy poco rentable encargar muchos periódicos cuanto mayor es el la pérdida que obtenemos al dejar periódicos sin vender.
-Por el mismo motivo, las ganancias máximas se reducen, puesto que lo más probable es vender pocos periódicos.
+En este caso podemos ver como, al ser más posible vender pocas unidades que vender mucho, es muy poco rentable encargar muchos periódicos cuanto mayor es la pérdida que obtenemos al dejar periódicos sin vender.
+Por el mismo motivo, las ganancias máximás se reducen, puesto que lo más probable es vender pocos periódicos.
 
 Para la distribución c:
 
@@ -220,7 +220,7 @@ Aquí podemos ver los datos de manera gráfica.
 \section{Modificaciones del modelo}
 
 \subsection{Primera modificación}
-La primera modificación al sistema consiste en eliminar las pérdidas por unidad no vendida, es decir, y = 0. Sin embargo introducimos un nuevo parámetro z que representa los gastos de devolución de las unidades no vendidas. Es decir, ahora las pérdidas son independientes de cuanto gastemos, si no de cuanto cueste devolver las unidades no vendidas.
+La primera modificación al sistema consiste en eliminar las pérdidas por unidad no vendida, es decir, y = 0. Sin embargo introducimos un nuevo parámetro z que representa los gastos de devolución de las unidades no vendidas. Es decir, ahora las pérdidas son independientes de cuanto no vendamos, si no que dependen de cuanto cueste devolver las unidades no vendidas.
 
 Podemos ver a continuación los resultados obtenidos en la simulación para esta modificación. Lo primero debe ser notar que los posibles valores de z con los que trabajamos son 100, 500 y 1000. Esto es respectivamente que los costes de devolución equivalen a 10 ventas --- porque por cada venta se obtiene un beneficio de 10 ---, 50 ventas y 100 ventas, es decir, un 10\% de las ventas, la mitad de las ventas y el total de las ventas, ya que la demanda máxima puede ser 100 periódicos.
 
@@ -266,6 +266,8 @@ Podemos ver que para unos gastos de devolución de 100€ la ganancia aumenta se
 Para los gastos de devolución de 500€ podemos observar como el número de unidades de periódicos necesarias para alcanzar el mismo se reduce drasticamente, llegando a incluso a obtener pérdidas en vez de beneficios. Sobre todo para la distribución de probabilidad b, ya que es mucho menos probable vender un gran número de periódicos.
 
 Para los gastos de devolución de 1000€ vemos que es una opción inviable para las distribuciones a y b, sin embargo, si es una opción posible si trabajamos con la distribución c, aunque los beneficios totales son bastante reducidos.
+
+\newpage
 
 A continuación podemos ver los resultados obtenidos gráficamente.
 
@@ -338,7 +340,7 @@ Ahora es posible elegir entre la opción que genere la mínima pérdida de diner
 \end{tabular}
 \end{table}
 
-Podemos apreciar como en general, los resultados obtenidos se parecen significativamente a los obtenidos para la simulación sin modificar, por lo que podemos inferir, que resulta más economico fijar un precio de devolución variable segun el número de unidades que queden sin vender que fijar un precio total.
+Podemos apreciar como en general, los resultados obtenidos se parecen significativamente a los obtenidos para la simulación sin modificar, por lo que podemos inferir, que resulta más económico fijar un precio de devolución variable segun el número de unidades que queden sin vender que fijar un precio total.
 
 Esto tiene sentido, ya que al ser los precios de devolución por unidad más pequeños que los precios fijos de devolución, es decir, al ser y más pequeña que z, es muy improbable que la demanda sea lo suficientemente baja como para provocar unas pérdidas tan grandes por unidad no vendida que igualen o superen a las pérdidas producidas por un precio de devolución fijo.
 
